--- a/css/travel_home.css
+++ b/css/travel_home.css
@@ -879,48 +879,206 @@ section.item .item_container .inr li:nth-of-type(6) a:before {
 
 section.tripevent {
   width: 100vw;
-  height: 400px;
+  height: 580px;
   padding: 100px 0;
-  background-color: #e7e7e7;
+  background-color: #f3da6a;
 }
 
 section.tripevent .te_container {
   display: flex;
   justify-content: space-between;
-  width: 1200px;
-  height: 400px;
+  width: 1000px;
+  height: 550px;
   margin: 0 auto;
 }
 
 section.tripevent .te_container .trip {
-  width: 65%;
-  background-color: #fff;
+  width: 100%;
 }
 
 section.tripevent .te_container .trip h2 {
+  padding: 20px 0;
   font-size: 1.7rem;
 }
 
 section.tripevent .te_container .trip ul {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
+  padding: 20px 0;
+  border: 1px solid #000;
+  box-sizing: border-box;
 }
 
-section.tripevent .te_container .trip ul li > a {
+section.tripevent .te_container .trip ul li {
+  overflow: hidden;
+  position: relative;
+  margin: 10px 0;
+}
+
+section.tripevent .te_container .trip ul li a {
   display: block;
   width: 200px;
   height: 200px;
+  overflow: hidden;
 }
 
-section.tripevent .te_container .trip ul li > a img {
+section.tripevent .te_container .trip ul li a img {
   display: block;
+  width: 150%;
+  transition: 0.6s;
+}
+
+section.tripevent .te_container .trip ul li a div {
+  position: absolute;
+  bottom: -80px;
+  padding: 20px;
   width: 100%;
+  height: 80px;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+section.tripevent .te_container .trip ul li a div h4 {
+  font-size: 1.5rem;
+}
+
+section.tripevent .te_container .trip ul li a div p {
+  font-size: 1.1rem;
+  padding-top: 10px;
+}
+
+section.tripevent .te_container .trip ul li a:nth-of-type(3) > img {
+  width: 100%;
+}
+
+section.tripevent .te_container .trip ul li:hover img {
+  transform: scale(1.2);
+}
+
+section.tripevent .te_container .trip ul li:hover div {
+  bottom: 0;
 }
 
 section.tripevent .te_container .event {
   width: 30%;
   background-color: #fff;
+}
+
+section.camping {
+  width: 100vw;
+  height: 800px;
+  margin: 0 auto;
+  background-color: #31313b;
+}
+
+section.camping .camping_container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 100px 0;
+  text-align: center;
+}
+
+section.camping .camping_container h4 {
+  display: inline-block;
+  margin-bottom: 20px;
+  padding-top: 5px;
+  color: #ebcd6b;
+  font-size: 1.2rem;
+  border-top: 3px solid #ebcd6b;
+}
+
+section.camping .camping_container h2 {
+  color: #fff;
+  font-size: 3.8rem;
+  font-weight: 600;
+}
+
+section.camping .camping_container p {
+  margin: 30px 0 80px;
+  color: #fff;
+  font-weight: 400;
+  font-size: 1.3rem;
+  line-height: 20px;
+}
+
+section.camping .camping_container .place {
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  width: 1000px;
+  margin: 0 auto;
+}
+
+section.camping .camping_container .place li {
+  margin-right: 20px;
+}
+
+section.camping .camping_container .place li:hover div {
+  bottom: 0;
+}
+
+section.camping .camping_container .place li a {
+  overflow: hidden;
+  display: block;
+  width: 180px;
+  height: 180px;
+  border-radius: 20px;
+}
+
+section.camping .camping_container .place li a img {
+  display: block;
+  height: 100%;
+}
+
+section.camping .camping_container .place li a div {
+  position: absolute;
+  bottom: -180px;
+  width: 180px;
+  height: 180px;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+  box-sizing: border-box;
+  transition: 0.6s;
+}
+
+section.camping .camping_container .place li a div::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 160px;
+  height: 160px;
+  border: 1px solid #fff;
+  border-radius: 15px;
+}
+
+section.camping .camping_container .place li a div h4 {
+  margin-bottom: 0;
+  margin-top: 20px;
+  color: #fff;
+  font-size: 1.5rem;
+  line-height: 20px;
+  border-top: none;
+  border-bottom: 2px solid #fff;
+}
+
+section.camping .camping_container .place li a div p {
+  color: #fff;
+  font-size: 1.1rem;
+  margin-bottom: 15px;
+  margin-top: 10px;
+}
+
+section.camping .camping_container .place li a div span {
+  color: #fff;
+  font-size: 1.3rem;
+  font-weight: 800;
 }
 
 footer {
