--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -737,36 +737,82 @@ section.item {
 }
 section.tripevent {
   width: 100vw;
-  height: 400px;
+  height: 580px;
   padding: 100px 0;
-  background-color: rgb(231, 231, 231);
+  background-color: #f3da6a;
 
   .te_container {
     display: flex;
     justify-content: space-between;
-    width: 1200px;
-    height: 400px;
+    width: 1000px;
+    height: 550px;
     margin: 0 auto;
 
     .trip {
-      width: 65%;
-      background-color: #fff;
+      width: 100%;
 
       h2 {
+        padding: 20px 0;
+
         font-size: 1.7rem;
       }
       ul {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
         flex-wrap: wrap;
-        li > a {
-          display: block;
-          width: 200px;
-          height: 200px;
+        padding: 20px 0;
+        // background-color: rgba(255, 255, 255, 0.3);
+        border: 1px solid #000;
+        box-sizing: border-box;
 
-          img {
+        li {
+          overflow: hidden;
+          position: relative;
+          margin: 10px 0;
+          a {
             display: block;
+            width: 200px;
+            height: 200px;
+            overflow: hidden;
+
+            img {
+              display: block;
+              width: 150%;
+              transition: 0.6s;
+            }
+
+            div {
+              position: absolute;
+              bottom: -80px;
+              padding: 20px;
+              width: 100%;
+              height: 80px;
+              color: #fff;
+              background-color: rgba(0, 0, 0, 0.5);
+              box-sizing: border-box;
+
+              transition: 0.5s;
+
+              h4 {
+                font-size: 1.5rem;
+              }
+              p {
+                font-size: 1.1rem;
+                padding-top: 10px;
+              }
+            }
+          }
+          a:nth-of-type(3) > img {
             width: 100%;
+          }
+
+          &:hover {
+            img {
+              transform: scale(1.2);
+            }
+            div {
+              bottom: 0;
+            }
           }
         }
       }
@@ -774,6 +820,120 @@ section.tripevent {
     .event {
       width: 30%;
       background-color: #fff;
+    }
+  }
+}
+
+section.camping {
+  width: 100vw;
+  height: 800px;
+  margin: 0 auto;
+  background-color: rgb(49, 49, 59);
+  .camping_container {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 100px 0;
+    text-align: center;
+    h4 {
+      display: inline-block;
+      margin-bottom: 20px;
+      padding-top: 5px;
+
+      color: rgb(235, 205, 107);
+      font-size: 1.2rem;
+
+      border-top: 3px solid rgb(235, 205, 107);
+    }
+
+    h2 {
+      color: #fff;
+      font-size: 3.8rem;
+      font-weight: 600;
+    }
+    p {
+      margin: 30px 0 80px;
+
+      color: #fff;
+      font-weight: 400;
+      font-size: 1.3rem;
+      line-height: 20px;
+    }
+
+    .place {
+      display: flex;
+      justify-content: center;
+      overflow: hidden;
+      position: relative;
+      width: 1000px;
+      margin: 0 auto;
+
+      li {
+        margin-right: 20px;
+        &:hover {
+          div {
+            bottom: 0;
+          }
+        }
+        a {
+          overflow: hidden;
+          display: block;
+          width: 180px;
+          height: 180px;
+          border-radius: 20px;
+
+          img {
+            display: block;
+            height: 100%;
+          }
+
+          div {
+            position: absolute;
+            bottom: -180px;
+            width: 180px;
+            height: 180px;
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.3);
+            border-radius: 20px;
+
+            box-sizing: border-box;
+
+            transition: 0.6s;
+
+            &::after {
+              content: "";
+              display: block;
+              position: absolute;
+              top: 10px;
+              left: 10px;
+              width: 160px;
+              height: 160px;
+              border: 1px solid #fff;
+              border-radius: 15px;
+            }
+
+            h4 {
+              margin-bottom: 0;
+              margin-top: 20px;
+              color: #fff;
+              font-size: 1.5rem;
+              line-height: 20px;
+              border-top: none;
+              border-bottom: 2px solid #fff;
+            }
+            p {
+              color: #fff;
+              font-size: 1.1rem;
+              margin-bottom: 15px;
+              margin-top: 10px;
+            }
+            span {
+              color: #fff;
+              font-size: 1.3rem;
+              font-weight: 800;
+            }
+          }
+        }
+      }
     }
   }
 }
