--- a/css/travel_home.css
+++ b/css/travel_home.css
@@ -305,11 +305,33 @@ header .hd_container nav .gnb li .lnb li {
 
 header .hd_container nav .gnb li .lnb li a {
   display: block;
+  position: relative;
   width: 150px;
   height: 40px;
   color: #fff;
   font-weight: 400;
   line-height: 40px;
+}
+
+header .hd_container nav .gnb li .lnb li a span {
+  position: absolute;
+  left: 95px;
+  color: #f18226;
+  font-size: 1rem;
+  font-weight: 800;
+  animation: click 0.5s infinite;
+}
+
+@keyframes click {
+  0% {
+    transform: translate(-3px);
+  }
+  50% {
+    transform: translate(3px);
+  }
+  100% {
+    transform: translate(-3px);
+  }
 }
 
 header .hd_container nav .gnb li .lnb li:hover, header .hd_container nav .gnb li .lnb li.on {
