--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -144,11 +144,33 @@ header {
               display: block;
               a {
                 display: block;
+                position: relative;
                 width: 150px;
                 height: 40px;
                 color: #fff;
                 font-weight: 400;
                 line-height: 40px;
+
+                span {
+                  position: absolute;
+                  left: 95px;
+                  color: rgb(241, 130, 38);
+                  font-size: 1rem;
+                  font-weight: 800;
+                  animation: click 0.5s infinite;
+
+                  @keyframes click {
+                    0% {
+                      transform: translate(-3px);
+                    }
+                    50% {
+                      transform: translate(3px);
+                    }
+                    100% {
+                      transform: translate(-3px);
+                    }
+                  }
+                }
               }
 
               &:hover,
